# asteroids

./: .clang-format  .editorconfig  .gitignore  LICENSE  README.md  asteroid.c  asteroid.h  asteroidShower.c  asteroidShower.h  blink.c  blink.h  designCanvas.c  designCanvas.h  drawHelpers.c  drawHelpers.h  fontLoader.c  fontLoader.h  game.c  game.h  globalActions.c  globalActions.h  healthBar.c  healthBar.h  heart.c  heart.h  icon.c  icon.h  input.c  input.h  main.c  malloc.c  malloc.h  meson.build  meson.options  meteorShower.c  meteorShower.h  objects.c  objects.h  player.c  player.h  (+14 more)
.githooks/: pre-commit
.github/workflows/: build.yml
assets/sounds/: shoot.h
cross/: emscripten.ini
diagrams/: objCollision.drawio
resources/audio/: asteroid_hit.rfx  hit.h  player_hit.rfx  shoot.h  shoot.rfx
resources/diagrams/: Startscreen.drawio  gameLoop.drawio
resources/icons/: icon.xcf
